--- a/sesion4.MVCCasero/WebContent/WEB-INF/web.xml
+++ b/sesion4.MVCCasero/WebContent/WEB-INF/web.xml
@@ -41,6 +41,6 @@
     <url-pattern>*.gif</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
-    <welcome-file>login.jsp</welcome-file>
+    <welcome-file>menu.jsp</welcome-file>
   </welcome-file-list>
 </web-app>
