Ciclo de vida de usuario completado
Registro , inicio de sesion , perfil y cierre de sesion

--- a/sesion4.MVCCasero/WebContent/WEB-INF/web.xml
+++ b/sesion4.MVCCasero/WebContent/WEB-INF/web.xml
@@ -14,7 +14,7 @@
   </context-param>
   <context-param>
    <param-name>creador</param-name>
-    <param-value>roberto_fernandez_diaz</param-value>
+    <param-value>roberto_fernandez_diaz y Damian</param-value>
   </context-param>
   <listener>
     <listener-class>uo.sdi.listener.LoggingInitialization</listener-class>
